--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.2/codemirror.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.2/codemirror.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.2/mode/javascript/javascript.min.js"></script> -->
-    <link rel="stylesheet" href="/assets/monaco-editor/min/vs/editor/editor.main.css" />
+    <!-- <link rel="stylesheet" href="/assets/monaco-editor/min/vs/editor/editor.main.css" />
     <script src="/assets/monaco-editor/min/vs/loader.js"></script>
     <script>
       // Configure the Monaco Editor to load from the assets folder
@@ -23,7 +23,7 @@
       // Load the Monaco Editor
       importScripts('/assets/monaco-editor/min/vs/editor/editor.main.nls.js');
       importScripts('/assets/monaco-editor/min/vs/editor/editor.main.js');
-    </script>
+    </script> -->
   
 </head>
 <body class="mat-typography">
